[package]
name = "fontsdf"
version = "0.5.0"
edition = "2021"
description = "fontdue extension to generate sdf:s directly"
license = "MIT"
repository = "https://github.com/Overpeek/fontsdf"
documentation = "https://docs.rs/fontsdf"
keywords = ["font", "sdf", "truetype", "opentype", "ttf"]
categories = ["no-std", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
debug = true

[dependencies]
ttf-parser = "0.19"
ordered-float = "3.6"
glam = "0.23"
fontdue = "0.7"

[dev-dependencies]
image = "0.24"
criterion = "0.4.0"

[[bench]]
name = "main"
harness = false
