[package]
name = "fontsdf"
version = "0.5.2"
edition = "2021"
description = "fontdue extension to generate sdf:s directly"
license = "MIT"
repository = "https://github.com/Overpeek/fontsdf"
documentation = "https://docs.rs/fontsdf"
keywords = ["font", "sdf", "truetype", "opentype", "ttf"]
categories = ["no-std", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
debug = true

[dependencies]
ttf-parser = "0.25"
glam = "0.30"
fontdue = "0.9"
hashbrown = "0.15"

[dev-dependencies]
image = "0.25"
criterion = "0.7"

[[bench]]
name = "main"
harness = false
